--- a/package.json
+++ b/package.json
@@ -5,10 +5,31 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@babel/core": "^7.17.5",
+        "@babel/plugin-proposal-class-properties": "^7.16.7",
+        "@babel/plugin-syntax-jsx": "^7.18.6",
+        "@babel/preset-react": "^7.16.7",
+        "@popperjs/core": "^2.10.2",
+        "@vitejs/plugin-react": "^2.0.0",
         "axios": "^0.27",
+        "babel-loader": "^8.2.3",
+        "babel-preset-react": "^6.24.1",
+        "bootstrap": "^5.1.3",
+        "css-loader": "^6.7.1",
+        "html-webpack-plugin": "^5.5.0",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^3.0.0"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "sass": "^1.32.11",
+        "style-loader": "^3.3.1",
+        "vite": "^3.0.0",
+        "webpack": "^5.70.0",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.4"
+    },
+    "dependencies": {
+        "react-router-dom": "^6.3.0"
     }
 }
